samples/_failures_safe/1761280044_3ca9c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a293676f.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_a293676f.c:186:20: error: missing terminating " character
  186 |             printf("Vertex %d: unreachable\n
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a293676f.c:186:13: error: expected expression at end of input
  186 |             printf("Vertex %d: unreachable\n
      |             ^~~~~~
./samples/SAFE/__tmp_a293676f.c:186:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a293676f.c:186:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a293676f.c:186:13: error: expected declaration or statement at end of input
